# GRENML

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  check.sh  excel_conversion.py  requirements.txt  setup.cfg  setup.py
docs/: exception.md  index.md  quick-start.md
docs/Sample Conversion Spreadsheet/: GREN_data.v1_0.xlsx
docs/classes/: base.md  grenml-writer.md  institutions.md  links.md  manager.md  nodes.md  topology.md  validation.md
docs/development/: changelog.md  coding_conventions.md  grenml-parser.md  release.md
grenml/schemas/: example.xml
test_result/: test-results.xml
tests/: test_id_generation.py  test_import_excel.py  test_institution.py  test_links.py  test_manager.py  test_node.py  test_topology.py
tests/test_parser_reader/: grenml.xsd  minimal_topology.xml  multiple_institutions.xml  test_reader.py  topology_with_a_link.xml  topology_with_a_node.xml  topology_with_multiple_links.xml  topology_with_multiple_nodes.xml
tests/test_writer/: test_writer.py  test_writer_shortcut.py
