[metadata]
name = grenml
version = attr: grenml.__version__
author = GREN Map Working Group
description = Library for creating, parsing, and storing GRENML
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = Apache Software License
license_file = LICENSE
keywords = global, network, markup, language, gren, national, research, education, regional, institution, nren
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Framework :: Flake8
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Networking
	Topic :: Text Processing :: Markup :: XML
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Telecommunications Industry
url = https://github.com/grenmap/grenml

[project_urls]
Documentation = https://github.com/grenmap/grenml/blob/main/README.md
Source = https://github.com/grenmap/grenml

[options]
include_package_data = True
packages = find:
install_requires =
	backports-datetime-fromisoformat~=1.0
	python-dateutil~=2.8
	lxml~=4.9.0
	openpyxl~=3.0
python_requires = ~=3.9

[options.packages.find]
exclude =
	docs
	test*

[options.package_data]
grenml = *.py
grenml.schemas = *.xsd

# configuration for pytest testing in Docker
[tool:pytest]
python_paths = /home/grenml_lib/
junit_family = xunit2
addopts =
	--junitxml=test_result/test-results.xml
python_files =
	test_*.py

# configuration for flake8
[flake8]
max-line-length = 99
max-doc-length = 72
# Unused imports are ignored for init.py to allow for importing all
# models in a folder
per-file-ignores =
		**/__init__.py:F401
                # our exception class names do not end with "Error"
                grenml/parsing/exceptions.py:N818
                # we have camel case method names
                grenml/**/*:N802
                # ignore line length errors in test files
                tests/**:E501,W505

# ignore files in the virtual environment and build dirs
exclude = venv,build

# F403 - Star imports are now allowed
# F405 - Ignore warnings that result from star imports
ignore = F403,F405